[package]
name = "plugins-webhook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "plugins-webhook"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"]}
reqwest = { version = "0.11", features = ["json"]}

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

log = "0.4"
lazy_static = "1.4"

hmac = "0.12"
sha2 = "0.10"
constant_time_eq = "0.2"

# Explicit dependency to compile openssl from openssl-src instead as a workaround for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
